--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>  
 <html>  
     <header>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./Example_CSS_Style Templates/style2.css">
         <link rel="stylesheet" href="table_style.css">
-        <title>My Webpage Title</title>
+        <title>Reina Ying</title>
     </header>
     <body>  
         <!---Navigation--->
@@ -23,7 +23,7 @@
             <div class="container d-flex align-items-center flex-column">
                 
                 <!-- This code is for the student name-->
-                <h1 class="masthead-heading text-uppercase mb-0">Test Student</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">Reina Ying</h1>
                 <!--This code creates the two lines separating the student name from the subtitle-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -35,8 +35,9 @@
         </header>
         <section class="text-center">
 
-            <div class="col-md-6 col-lg-4 mb-5">
+            <div class="col-md-6 col-lg-12 mb-5">
                 <!-- put your bio paragraph here; remember to use the correct html tags -->
+                <p>My name is Reina Ying. I am currently a MIMS25 student. I focus on data science and product management.</p>  
                 
             </div>
         </section>
